--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 
                 <div class="col-sm-4">
                     <div class="figure-img">
-                        <img src="assets/awards_cert/insta award.jpg" alt="" class="img-thumbnail mb-0">
+                        <img src="assets/awards_cert/Insta Award.jpg" alt="" class="img-thumbnail mb-0">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Insta Award</h5>
