--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                       <div class="overlay">
                         <div class="overlay-infos">
                           <h5>Ecommerce sales Analysis Dashboarding using Excel</h5>
+                          <h6>This dashboard delivers insights for an eCommerce platform, empowering data-driven decision-making. It was created using Excel for dashboarding.</h6>
                         </div>                              
                       </div>
                     </div>      
@@ -191,6 +192,7 @@
                     <div class="figure-img">
                        <a href="https://github.com/Vivekrai-tech/Dashboarding-using-PowerBI">
                         <img src="assets/github project images/AltiQ Hardware Insights Dashboard.png" alt="" class="img-thumbnail mb-0">
+                        <h6>This dashboard includes four perspectives—Finance, Sales, Marketing, and Supply Chain. Row-Level Security in Power BI ensures that each stakeholder has access only to their relevant dashboard.</h6>
                         </a>
                       <div class="overlay">
                         <div class="overlay-infos">
