--- a/index.html
+++ b/index.html
@@ -202,6 +202,23 @@
                       </div>
                     </div>      
                   </div>
+
+                  <div class="col-sm-6">
+                    <div class="figure-img">
+                       <a href="https://github.com/Vivekrai-tech/Data-Analyst-Master-Thesis/tree/main/AutoML%20final%20submission">
+                        <img src="assets/github project images/Masters thesis.png" alt="" class="img-thumbnail mb-0">
+                        </a>
+                      <div class="overlay">
+                        <div class="overlay-infos">
+                          <h5>Master's Thesis</h5>
+                          <h6>A novel AutoML library for transfer learning workflows. We have developed a Library which can run this transfer Learning VGG19, ResNet-50, Imagenet, DenseNet-121 and EfficientNet-B7
+                            and select the best performing model.
+                          </h6>
+
+                        </div>                              
+                      </div>
+                    </div>      
+                  </div>
                 
 
             </div>
