--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <!-- Project section -->
     <section id="Projects" class="section">
         <div class="container text-center">
-            <h6 class="subtitle">I have honned my skills by developing below Projects</h6>
+            <h6 class="subtitle">Here are the links to some of the personal projects I've developed.</h6>
             <h6 class="section-title mb-4">Projects</h6>
             <p class="mb-5 pb-4">Here are some of my Projects where I applied my skills of Data Analysis,data cleaning,data trasnformation and visualization </p>
 
