--- a/index.html
+++ b/index.html
@@ -190,13 +190,28 @@
                   </div>
                   <div class="col-sm-6">
                     <div class="figure-img">
-                       <a href="https://github.com/Vivekrai-tech/Dashboarding-using-PowerBI">
+                       <a href="https://github.com/Vivekrai-tech/Dashboarding-using-PowerBI/tree/main/AltiQ%20Insights%20Dashboard">
                         <img src="assets/github project images/AltiQ Hardware Insights Dashboard.png" alt="" class="img-thumbnail mb-0">
                         </a>
                       <div class="overlay">
                         <div class="overlay-infos">
                           <h5> Power BI Dashboard for AltiQ hardware</h5>
                           <h6>This dashboard includes four perspectives—Finance, Sales, Marketing, and Supply Chain. Row-Level Security in Power BI ensures that each stakeholder has access only to their relevant dashboard.</h6>
+
+                        </div>                              
+                      </div>
+                    </div>      
+                  </div>
+
+                  <div class="col-sm-6">
+                    <div class="figure-img">
+                       <a href="https://github.com/Vivekrai-tech/Dashboarding-using-PowerBI/tree/main/SuperStore%20sales%20Dashboard">
+                        <img src="assets/github project images/Superstore sales Dashboard.png" alt="" class="img-thumbnail mb-0">
+                        </a>
+                      <div class="overlay">
+                        <div class="overlay-infos">
+                          <h5> Power BI Dashboard for Superstore Business in USA</h5>
+                          <h6>This dashboard enables us to assess the performance of superstores across various regions in the USA, providing valuable data-driven insights to support key business decisions.</h6>
 
                         </div>                              
                       </div>
