--- a/index.html
+++ b/index.html
@@ -167,6 +167,197 @@
 
 </body>
 </html> 
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio - Skills Section</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+        .skills-section {
+            max-width: 1000px;
+            margin: 50px auto;
+            padding: 20px;
+            background: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+        .skills-section h2 {
+            margin-bottom: 20px;
+            font-size: 2em;
+            color: #333; /* Orange heading */
+        }
+        .skills-category {
+            margin-bottom: 30px;
+        }
+        .skills-category h3 {
+            font-size: 1.5em;
+            margin-bottom: 15px;
+            color: #333; /* Orange subheading */
+        }
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 15px;
+        }
+        .skill-button {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 15px;
+            background-color: #ff6f00; /* Orange button background */
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            font-size: 1em;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .skill-button:hover {
+            background-color: #e65c00; /* Darker orange on hover */
+        }
+        .skill-button i {
+            margin-bottom: 10px;
+            font-size: 1.5em;
+        }
+        .skill-button .skill-name {
+            font-size: 1em;
+            margin-bottom: 5px;
+        }
+        .skill-button .skill-percentage {
+            font-size: 0.9em;
+            opacity: 0.8;
+        }
+    </style>
+</head>
+<body>
+
+    <section class="skills-section">
+        <h2>Skills</h2>
+
+        <!-- Business Intelligence Tools -->
+        <div class="skills-category">
+            <h3>Business Intelligence Tools</h3>
+            <div class="skills-grid">
+                <button class="skill-button">
+                    <i class="fas fa-chart-line"></i>
+                    <span class="skill-name">Power BI</span>
+                    <span class="skill-percentage">90%</span>
+                </button>
+                <button class="skill-button">
+                    <i class="fas fa-chart-bar"></i>
+                    <span class="skill-name">Tableau</span>
+                    <span class="skill-percentage">75%</span>
+                </button>
+                <button class="skill-button">
+                    <i class="fas fa-database"></i>
+                    <span class="skill-name">Oracle APEX</span>
+                    <span class="skill-percentage">85%</span>
+                </button>
+                <button class="skill-button">
+                    <i class="fas fa-file-alt"></i>
+                    <span class="skill-name">Oracle BI Publisher</span>
+                    <span class="skill-percentage">80%</span>
+                </button>
+                <button class="skill-button">
+                    <i class="fas fa-table"></i>
+                    <span class="skill-name">Excel</span>
+                    <span class="skill-percentage">85%</span>
+                </button>
+            </div>
+        </div>
+
+        <!-- Programming Languages -->
+        <div class="skills-category">
+            <h3>Programming Languages</h3>
+            <div class="skills-grid">
+                <button class="skill-button">
+                    <i class="fab fa-python"></i>
+                    <span class="skill-name">Python</span>
+                    <span class="skill-percentage">85%</span>
+                </button>
+                <button class="skill-button">
+                    <i class="fas fa-database"></i>
+                    <span class="skill-name">SQL</span>
+                    <span class="skill-percentage">90%</span>
+                </button>
+                <button class="skill-button">
+                    <i class="fas fa-database"></i>
+                    <span class="skill-name">PL/SQL</span>
+                    <span class="skill-percentage">95%</span>
+                </button>
+            </div>
+        </div>
+
+        <!-- Development & Collaboration Tools -->
+        <div class="skills-category">
+            <h3>Development & Collaboration Tools</h3>
+            <div class="skills-grid">
+                <button class="skill-button">
+                    <i class="fab fa-jira"></i>
+                    <span class="skill-name">Jira</span>
+                    <span class="skill-percentage">85%</span>
+                </button>
+                <button class="skill-button">
+                    <i class="fas fa-tasks"></i>
+                    <span class="skill-name">Service-Now</span>
+                    <span class="skill-percentage">75%</span>
+                </button>
+                <button class="skill-button">
+                    <i class="fab fa-github"></i>
+                    <span class="skill-name">GitHub</span>
+                    <span class="skill-percentage">90%</span>
+                </button>
+                <button class="skill-button">
+                    <i class="fas fa-palette"></i>
+                    <span class="skill-name">Microsoft Whiteboard</span>
+                    <span class="skill-percentage">70%</span>
+                </button>
+                <button class="skill-button">
+                    <i class="fas fa-calendar-alt"></i>
+                    <span class="skill-name">Control-M Scheduler</span>
+                    <span class="skill-percentage">80%</span>
+                </button>
+            </div>
+        </div>
+
+        <!-- Cloud Platforms -->
+        <div class="skills-category">
+            <h3>Cloud Platforms</h3>
+            <div class="skills-grid">
+                <button class="skill-button">
+                    <i class="fas fa-cloud"></i>
+                    <span class="skill-name">Oracle Cloud</span>
+                    <span class="skill-percentage">80%</span>
+                </button>
+                <button class="skill-button">
+                    <i class="fab fa-microsoft"></i>
+                    <span class="skill-name">Microsoft Azure</span>
+                    <span class="skill-percentage">85%</span>
+                </button>
+                <button class="skill-button">
+                    <i class="fab fa-aws"></i>
+                    <span class="skill-name">AWS Services</span>
+                    <span class="skill-percentage">75%</span>
+                </button>
+            </div>
+        </div>
+    </section>
+
+</body>
+</html>
+
     <!-- Project section -->
     <section id="Projects" class="section">
         <div class="container text-center">
