--- a/index.html
+++ b/index.html
@@ -168,7 +168,6 @@
 </body>
 </html> 
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -185,7 +184,7 @@
             padding: 0;
         }
         .skills-section {
-            max-width: 10000px;
+            max-width: 12000px;
             margin: 50px auto;
             padding: 20px;
             background: #fff;
@@ -195,49 +194,54 @@
         .skills-section h2 {
             margin-bottom: 20px;
             font-size: 2em;
-            color: #333; /* Orange heading */
+            color: #000; /* Black heading */
         }
-        .skills-category {
-            margin-bottom: 30px;
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
         }
-        .skills-category h3 {
-            font-size: 1.5em;
-            margin-bottom: 15px;
-            color: #333; /* Orange subheading */
+        table th, table td {
+            padding: 12px;
+            border: 1px solid #ddd;
+            text-align: center;
         }
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 15px;
+        table th {
+            background-color: #ff6f00; /* Orange header */
+            color: #fff;
+            font-size: 1.1em;
+        }
+        table tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+        table tr:hover {
+            background-color: #f1f1f1;
         }
         .skill-button {
-            display: flex;
-            flex-direction: column;
+            display: inline-flex;
             align-items: center;
             justify-content: center;
-            padding: 15px;
-            background-color: #ff6f00; /* Orange button background */
+            width: 150px; /* Fixed width for all buttons */
+            padding: 10px;
+            background-color: #ff6f00; /* Orange button */
             color: #fff;
             border: none;
             border-radius: 5px;
-            font-size: 1em;
+            font-size: 0.9em;
             cursor: pointer;
             transition: background-color 0.3s ease;
+            margin: 5px;
+            text-align: center;
         }
         .skill-button:hover {
             background-color: #e65c00; /* Darker orange on hover */
         }
         .skill-button i {
-            margin-bottom: 10px;
-            font-size: 1.5em;
+            margin-right: 5px;
         }
-        .skill-button .skill-name {
-            font-size: 1em;
-            margin-bottom: 5px;
-        }
-        .skill-button .skill-percentage {
-            font-size: 0.9em;
-            opacity: 0.8;
+        .skill-percentage {
+            font-weight: bold;
+            margin-left: 5px;
         }
     </style>
 </head>
@@ -246,117 +250,94 @@
     <section class="skills-section">
         <h2>Skills</h2>
 
-        <!-- Business Intelligence Tools -->
-        <div class="skills-category">
-            <h3>Business Intelligence Tools</h3>
-            <div class="skills-grid">
-                <button class="skill-button">
-                    <i class="fas fa-chart-line"></i>
-                    <span class="skill-name">Power BI</span>
-                    <span class="skill-percentage">90%</span>
-                </button>
-                <button class="skill-button">
-                    <i class="fas fa-chart-bar"></i>
-                    <span class="skill-name">Tableau</span>
-                    <span class="skill-percentage">75%</span>
-                </button>
-                <button class="skill-button">
-                    <i class="fas fa-database"></i>
-                    <span class="skill-name">Oracle APEX</span>
-                    <span class="skill-percentage">85%</span>
-                </button>
-                <button class="skill-button">
-                    <i class="fas fa-file-alt"></i>
-                    <span class="skill-name">Oracle BI Publisher</span>
-                    <span class="skill-percentage">80%</span>
-                </button>
-                <button class="skill-button">
-                    <i class="fas fa-table"></i>
-                    <span class="skill-name">Excel</span>
-                    <span class="skill-percentage">85%</span>
-                </button>
-            </div>
-        </div>
+        <!-- Skills Table -->
+        <table>
+            <thead>
+                <tr>
+                    <th>Business Intelligence Tools</th>
+                    <th>Programming Languages</th>
+                    <th>Development & Collaboration Tools</th>
+                    <th>Cloud Platforms</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <!-- Business Intelligence Tools -->
+                    <td>
+                        <button class="skill-button">
+                            <i class="fas fa-chart-line"></i>Power BI <span class="skill-percentage">90%</span>
+                        </button>
+                        <button class="skill-button">
+                            <i class="fas fa-chart-bar"></i>Tableau <span class="skill-percentage">75%</span>
+                        </button>
+                        <button class="skill-button">
+                            <i class="fas fa-database"></i>Oracle APEX <span class="skill-percentage">80%</span>
+                        </button>
+                        <button class="skill-button">
+                            <i class="fas fa-file-alt"></i>Oracle BI Publisher <span class="skill-percentage">75%</span>
+                        </button>
+                        <button class="skill-button">
+                            <i class="fas fa-table"></i>Excel <span class="skill-percentage">95%</span>
+                        </button>
+                    </td>
 
-        <!-- Programming Languages -->
-        <div class="skills-category">
-            <h3>Programming Languages</h3>
-            <div class="skills-grid">
-                <button class="skill-button">
-                    <i class="fab fa-python"></i>
-                    <span class="skill-name">Python</span>
-                    <span class="skill-percentage">85%</span>
-                </button>
-                <button class="skill-button">
-                    <i class="fas fa-database"></i>
-                    <span class="skill-name">SQL</span>
-                    <span class="skill-percentage">90%</span>
-                </button>
-                <button class="skill-button">
-                    <i class="fas fa-database"></i>
-                    <span class="skill-name">PL/SQL</span>
-                    <span class="skill-percentage">95%</span>
-                </button>
-            </div>
-        </div>
+                    <!-- Programming Languages -->
+                    <td>
+                        <button class="skill-button">
+                            <i class="fab fa-python"></i>Python <span class="skill-percentage">75%</span>
+                        </button>
+                        <button class="skill-button">
+                            <i class="fas fa-database"></i>SQL <span class="skill-percentage">90%</span>
+                        </button>
+                        <button class="skill-button">
+                            <i class="fas fa-database"></i>PL/SQL <span class="skill-percentage">85%</span>
+                        </button>
+                    </td>
 
-        <!-- Development & Collaboration Tools -->
-        <div class="skills-category">
-            <h3>Development & Collaboration Tools</h3>
-            <div class="skills-grid">
-                <button class="skill-button">
-                    <i class="fab fa-jira"></i>
-                    <span class="skill-name">Jira</span>
-                    <span class="skill-percentage">85%</span>
-                </button>
-                <button class="skill-button">
-                    <i class="fas fa-tasks"></i>
-                    <span class="skill-name">Service-Now</span>
-                    <span class="skill-percentage">75%</span>
-                </button>
-                <button class="skill-button">
-                    <i class="fab fa-github"></i>
-                    <span class="skill-name">GitHub</span>
-                    <span class="skill-percentage">90%</span>
-                </button>
-                <button class="skill-button">
-                    <i class="fas fa-palette"></i>
-                    <span class="skill-name">Microsoft Whiteboard</span>
-                    <span class="skill-percentage">70%</span>
-                </button>
-                <button class="skill-button">
-                    <i class="fas fa-calendar-alt"></i>
-                    <span class="skill-name">Control-M Scheduler</span>
-                    <span class="skill-percentage">80%</span>
-                </button>
-            </div>
-        </div>
+                    
 
-        <!-- Cloud Platforms -->
-        <div class="skills-category">
-            <h3>Cloud Platforms</h3>
-            <div class="skills-grid">
-                <button class="skill-button">
-                    <i class="fas fa-cloud"></i>
-                    <span class="skill-name">Oracle Cloud</span>
-                    <span class="skill-percentage">80%</span>
-                </button>
-                <button class="skill-button">
-                    <i class="fab fa-microsoft"></i>
-                    <span class="skill-name">Microsoft Azure</span>
-                    <span class="skill-percentage">85%</span>
-                </button>
-                <button class="skill-button">
-                    <i class="fab fa-aws"></i>
-                    <span class="skill-name">AWS Services</span>
-                    <span class="skill-percentage">75%</span>
-                </button>
-            </div>
-        </div>
+                    <!-- Cloud Platforms -->
+                    <td>
+                        <button class="skill-button">
+                            <i class="fas fa-cloud"></i>Oracle Cloud <span class="skill-percentage">80%</span>
+                        </button>
+                        <button class="skill-button">
+                            <i class="fab fa-microsoft"></i>Microsoft Azure <span class="skill-percentage">85%</span>
+                        </button>
+                        <button class="skill-button">
+                            <i class="fab fa-aws"></i>AWS Services <span class="skill-percentage">75%</span>
+                        </button>
+                    </td>
+
+                    <!-- Development & Collaboration Tools -->
+                    <td>
+                      <button class="skill-button">
+                          <i class="fab fa-jira"></i>Jira <span class="skill-percentage">85%</span>
+                      </button>
+                      <button class="skill-button">
+                          <i class="fas fa-tasks"></i>Service-Now <span class="skill-percentage">75%</span>
+                      </button>
+                      <button class="skill-button">
+                          <i class="fab fa-github"></i>GitHub <span class="skill-percentage">90%</span>
+                      </button>
+                      <button class="skill-button">
+                          <i class="fas fa-palette"></i>Microsoft Whiteboard <span class="skill-percentage">70%</span>
+                      </button>
+                      <button class="skill-button">
+                          <i class="fas fa-calendar-alt"></i>Control-M Scheduler <span class="skill-percentage">80%</span>
+                      </button>
+                      <button class="skill-button">
+                          <i class="fas fa-code"></i>Web APIs (SOAP/REST) <span class="skill-percentage">75%</span>
+                      </button>
+                  </td>
+                </tr>
+            </tbody>
+        </table>
     </section>
 
 </body>
 </html>
+
 
     <!-- Project section -->
     <section id="Projects" class="section">
