--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             padding: 0;
         }
         .skills-section {
-            max-width: 12000px;
+            max-width: 1200px;
             margin: 50px auto;
             padding: 20px;
             background: #fff;
@@ -194,22 +194,23 @@
         .skills-section h2 {
             margin-bottom: 20px;
             font-size: 2em;
-            color: #000; /* Black heading */
+            color: #ff6f00; /* Orange heading */
         }
         table {
             width: 100%;
             border-collapse: collapse;
             margin-bottom: 20px;
         }
-        table th, table td {
-            padding: 12px;
-            border: 1px solid #ddd;
-            text-align: center;
-        }
         table th {
             background-color: #ff6f00; /* Orange header */
             color: #fff;
             font-size: 1.1em;
+            padding: 12px;
+        }
+        table td {
+            padding: 12px;
+            border: 1px solid #ddd;
+            text-align: center;
         }
         table tr:nth-child(even) {
             background-color: #f9f9f9;
@@ -221,11 +222,11 @@
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            width: 150px; /* Fixed width for all buttons */
+            width: 150px;
             padding: 10px;
-            background-color: #ff6f00; /* Orange button */
-            color: #fff;
-            border: none;
+            background-color: #ddd; /* Neutral gray */
+            color: #333;
+            border: 1px solid #ccc;
             border-radius: 5px;
             font-size: 0.9em;
             cursor: pointer;
@@ -234,7 +235,7 @@
             text-align: center;
         }
         .skill-button:hover {
-            background-color: #e65c00; /* Darker orange on hover */
+            background-color: #bbb; /* Slightly darker gray on hover */
         }
         .skill-button i {
             margin-right: 5px;
@@ -250,87 +251,45 @@
     <section class="skills-section">
         <h2>Skills</h2>
 
-        <!-- Skills Table -->
         <table>
             <thead>
                 <tr>
                     <th>Business Intelligence Tools</th>
                     <th>Programming Languages</th>
-                    
                     <th>Cloud Platforms</th>
                     <th>Development & Collaboration Tools</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <!-- Business Intelligence Tools -->
                     <td>
-                        <button class="skill-button">
-                            <i class="fas fa-chart-line"></i>Power BI <span class="skill-percentage">90%</span>
-                        </button>
-                        <button class="skill-button">
-                            <i class="fas fa-chart-bar"></i>Tableau <span class="skill-percentage">75%</span>
-                        </button>
-                        <button class="skill-button">
-                            <i class="fas fa-database"></i>Oracle APEX <span class="skill-percentage">80%</span>
-                        </button>
-                        <button class="skill-button">
-                            <i class="fas fa-file-alt"></i>Oracle BI Publisher <span class="skill-percentage">75%</span>
-                        </button>
-                        <button class="skill-button">
-                            <i class="fas fa-table"></i>Excel <span class="skill-percentage">95%</span>
-                        </button>
+                        <button class="skill-button"><i class="fas fa-chart-line"></i> Power BI <span class="skill-percentage">90%</span></button>
+                        <button class="skill-button"><i class="fas fa-chart-bar"></i> Tableau <span class="skill-percentage">75%</span></button>
+                        <button class="skill-button"><i class="fas fa-database"></i> Oracle APEX <span class="skill-percentage">80%</span></button>
+                        <button class="skill-button"><i class="fas fa-file-alt"></i> Oracle BI Publisher <span class="skill-percentage">75%</span></button>
+                        <button class="skill-button"><i class="fas fa-table"></i> Excel <span class="skill-percentage">95%</span></button>
                     </td>
 
-                    <!-- Programming Languages -->
                     <td>
-                        <button class="skill-button">
-                            <i class="fab fa-python"></i>Python <span class="skill-percentage">75%</span>
-                        </button>
-                        <button class="skill-button">
-                            <i class="fas fa-database"></i>SQL <span class="skill-percentage">90%</span>
-                        </button>
-                        <button class="skill-button">
-                            <i class="fas fa-database"></i>PL/SQL <span class="skill-percentage">85%</span>
-                        </button>
+                        <button class="skill-button"><i class="fab fa-python"></i> Python <span class="skill-percentage">75%</span></button>
+                        <button class="skill-button"><i class="fas fa-database"></i> SQL <span class="skill-percentage">90%</span></button>
+                        <button class="skill-button"><i class="fas fa-database"></i> PL/SQL <span class="skill-percentage">85%</span></button>
                     </td>
 
-                    
-
-                    <!-- Cloud Platforms -->
                     <td>
-                        <button class="skill-button">
-                            <i class="fas fa-cloud"></i>Oracle Cloud <span class="skill-percentage">80%</span>
-                        </button>
-                        <button class="skill-button">
-                            <i class="fab fa-microsoft"></i>Microsoft Azure <span class="skill-percentage">85%</span>
-                        </button>
-                        <button class="skill-button">
-                            <i class="fab fa-aws"></i>AWS Services <span class="skill-percentage">75%</span>
-                        </button>
+                        <button class="skill-button"><i class="fas fa-cloud"></i> Oracle Cloud <span class="skill-percentage">80%</span></button>
+                        <button class="skill-button"><i class="fab fa-microsoft"></i> Microsoft Azure <span class="skill-percentage">85%</span></button>
+                        <button class="skill-button"><i class="fab fa-aws"></i> AWS Services <span class="skill-percentage">75%</span></button>
                     </td>
 
-                    <!-- Development & Collaboration Tools -->
                     <td>
-                      <button class="skill-button">
-                          <i class="fab fa-jira"></i>Jira <span class="skill-percentage">85%</span>
-                      </button>
-                      <button class="skill-button">
-                          <i class="fas fa-tasks"></i>Service-Now <span class="skill-percentage">75%</span>
-                      </button>
-                      <button class="skill-button">
-                          <i class="fab fa-github"></i>GitHub <span class="skill-percentage">90%</span>
-                      </button>
-                      <button class="skill-button">
-                          <i class="fas fa-palette"></i>Microsoft Whiteboard <span class="skill-percentage">70%</span>
-                      </button>
-                      <button class="skill-button">
-                          <i class="fas fa-calendar-alt"></i>Control-M Scheduler <span class="skill-percentage">80%</span>
-                      </button>
-                      <button class="skill-button">
-                          <i class="fas fa-code"></i>Web APIs (SOAP/REST) <span class="skill-percentage">75%</span>
-                      </button>
-                  </td>
+                        <button class="skill-button"><i class="fab fa-jira"></i> Jira <span class="skill-percentage">85%</span></button>
+                        <button class="skill-button"><i class="fas fa-tasks"></i> Service-Now <span class="skill-percentage">75%</span></button>
+                        <button class="skill-button"><i class="fab fa-github"></i> GitHub <span class="skill-percentage">90%</span></button>
+                        <button class="skill-button"><i class="fas fa-palette"></i> Microsoft Whiteboard <span class="skill-percentage">70%</span></button>
+                        <button class="skill-button"><i class="fas fa-calendar-alt"></i> Control-M Scheduler <span class="skill-percentage">80%</span></button>
+                        <button class="skill-button"><i class="fas fa-code"></i> Web APIs (SOAP/REST) <span class="skill-percentage">75%</span></button>
+                    </td>
                 </tr>
             </tbody>
         </table>
